# TapTrust-xcode

./: LICENSE  README.md  README_MIGRATION_STATUS.txt  REMOVE_THESE_PYTHON_FILES.txt  generate_mock_payload.py  pyproject.toml  settings.yaml  setup.sh
PyFiles/docs/: CONTRIBUTING.md
PyFiles/tests/: conftest.py  test_secure_channel.py  testkey_private.pem
PyFiles/verifier/: cli.py  config.py
PyFiles/verifier/crypto/: secure.py  trustkey.pem
PyFiles/verifier/decode/: cbor.py  sample_test_cbor.py  test_decode_cbor.py
PyFiles/verifier/nfc/: apdu.py
TapTrustSwift/: Package.swift
TapTrustSwift/.swiftpm/: TapTrustSwift-Package.xctestplan
TapTrustSwift/Sources/: CBORCOSE.swift  CLI.swift  CertLoader.swift  NFCReader.swift
TapTrustSwift/Sources/TapTrustCLI/: CLI.swift  discover_aids.swift  generate_mock_payload.swift  main.swift  read_raw_payload.swift
TapTrustSwift/Sources/TapTrustSwift/: APDU.swift  CBORCOSE.swift  CoreNFCReader.swift  CryptoUtils.swift  MockPayloadGenerator.swift  PCSCReader.swift  Platform+Reader.swift  Reader.swift
TapTrustSwift/Tests/TapTrustSwiftTests/: APDUTests.swift  COSETests.swift  test_cbor.swift  (+13 more)
docs/: CONTRIBUTING.md  architecture.md  swift_migration.md  xcode_build.md
examples/: discover_aids.py  generate_cose_payload.py  generate_mock_payload.py  mock_cose_payload.cbor  mock_payload.cbor  read_raw_payload.py
tests/: test_apdu.py  test_cbor.py  test_reader_helpers.py  test_verify.py
verifier/: __init__.py
verifier/crypto/: keys.py  secure.py  verify.py
verifier/decode/: cose.py
verifier/nfc/: reader.py
